--- a/Eclipse/Taplytics-Example/res/values/strings.xml
+++ b/Eclipse/Taplytics-Example/res/values/strings.xml
@@ -19,10 +19,16 @@
     <string name="user_attributes_button_text">USER ATTRIBUTES</string>
     <string name="user_attributes_text">With the SDK, you can pass Taplytics many kinds of user attributes, such as their email, id, gender, age, etc. \n\nYou can also send custom data, such as "paid subscription", or any other json data. \nModify and apply your experiments based on this data! \n\nThis page has sent some basic information to your Taplytics panel, see for yourself!</string>
 
+    <!-- Visual Experiments -->
+    <string name="visual_experiments_button_text">VISUAL EXPERIMENTS</string>
+    <string name="visual_experiment_text">Taplytics allows you to A/B test your app without writing a single line of code using visual experiments.</string>
+    <string name="visual_experiment_action">Give it a try. On your Taplytics dashboard, click "add element to variation", and then click an element on the app. \n\nFrom the dashboard, edit the settings on the view, select that variation, and check out your updates live!</string>
+
     <!-- Code Experiments -->
     <string name="events_title">EVENT TRACKING</string>
     <string name="event_text">Taplytics allows you to log unique events that happen within your app. \n\nEvents such as a purchase going through, social sharing, and simple button clicks can be tracked with one small function. </string>
     <string name="event_action">Give it a try, pressing the button will track a button press event, with the number of times its been pressed this session on this screen. </string>
     <string name="send_an_event">send an event</string>
+    <string name="view_the_source_code_for_each_example_to_see_how_to_use_taplytics_">View the source code for each example to see how to use Taplytics.</string>
 
 </resources>
