--- a/AndroidStudio/TaplyticsExample/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/TaplyticsExample/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Taplytics Example</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="mainText">An example app with the Taplyitcs Android SDK already integrated</string>
+    <string name="mainText">An example app with the Taplytics Android SDK already integrated</string>
     <string name="what_text">What is it?</string>
     <string name="in_action_text">In action.</string>
     <string name="events_button_text">EVENTS</string>
